--- a/an.css
+++ b/an.css
@@ -4,7 +4,7 @@
     color: white;
 }
 
-div{
+header{
     height: 60px;
     background-color: #0f1111;
 }
@@ -22,3 +22,18 @@ a{
     margin-right: 200px;
 }
 
+.contentbox{
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
+    display: inline-block;
+}
+#content{
+    height: 500px;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
