--- a/an.css
+++ b/an.css
@@ -37,3 +37,8 @@ footer{
     color: white;
     text-align: center;
 }
+
+#box1{
+    background-image: url("dubai.jpg");
+    background-size: cover;
+}
